internal/runtime/app/tests/snapshots/surface_snapshots__doctor_output_is_stable.snap
---
source: internal/runtime/app/tests/surface_snapshots.rs
expression: normalize_doctor(&output_stdout(output))
---
rtmd
  version             [version]
  protocol            0.8
  capabilities        structured_protocol_errors, headless_stdio_log_paths, status_session_set_filter, status_updated_since_filter, typed_nudge_outcomes, validate_target_preflight, events_cursor, events_long_poll, tmux_pane_snapshot, kill_outcomes, spawn_conflicts, spawn_request_mounts, nudge_wait_timeout
  socket              [socket]
  uptime              [uptime]
migrations
  applied migrations  1 of 1 (unified schema)
lifecycles
  forking             0
  running             0
  exited              0
  lost                0
process exit watchers 0
shim sockets          0
event waiters         [count]
launchers
  claude              [command]
  codex               [command]
tmux                  [availability]
docker
  cli                 ready (Docker version 27.0.0)
  daemon              ready (fake-docker)
  manifest validation ready ({"manifests":[{"platform":{"architecture":"arm64"}}]})
  isolation           supported=true workspace=/workspace experimental=true
last probe sweep      [timestamp]
recent lost           (none in last 24h)
