internal/runtime/app/tests/snapshots/surface_snapshots__session_facing_cli_json_outputs_are_stable.snap
---
source: internal/runtime/app/tests/surface_snapshots.rs
expression: snapshot
---
{
  "doctor": {
    "docker": {
      "cli": {
        "detail": "[detail]",
        "error": "[launcher_error]",
        "ready": "[readiness]"
      },
      "daemon": {
        "detail": "[detail]",
        "error": "[launcher_error]",
        "ready": "[readiness]"
      },
      "isolation": {
        "default_workspace": "[workspace]",
        "experimental": "[experimental]",
        "supported": "[support]"
      },
      "manifest_validation": {
        "detail": "[detail]",
        "error": "[launcher_error]",
        "ready": "[readiness]"
      }
    },
    "last_probe_sweep": "[timestamp]",
    "launchers": [
      {
        "command": "[command]",
        "error": "[launcher_error]",
        "runtime": "claude"
      },
      {
        "command": "[command]",
        "error": "[launcher_error]",
        "runtime": "codex"
      }
    ],
    "lifecycles": {
      "exited": "[count]",
      "forking": "[count]",
      "lost": "[count]",
      "running": "[count]"
    },
    "log_availability": [
      {
        "log_availability": {
          "payload": {
            "stderr_path": "[path]",
            "stdout_path": "[path]"
          },
          "type": "headless"
        },
        "session_id": "[uuid]"
      }
    ],
    "migrations": {
      "applied": 1,
      "applied_descriptions": [
        "unified schema"
      ],
      "pending_descriptions": [],
      "total": 1
    },
    "recent_lost": [],
    "socket_path": "[socket]",
    "tmux": {
      "available": "[tmux]",
      "error": "[launcher_error]",
      "version": "[version]"
    },
    "uptime_secs": "[uptime]",
    "version": {
      "capabilities": [
        "structured_protocol_errors",
        "headless_stdio_log_paths",
        "status_session_set_filter",
        "status_updated_since_filter",
        "typed_nudge_outcomes",
        "validate_target_preflight",
        "events_cursor",
        "events_long_poll",
        "tmux_pane_snapshot",
        "kill_outcomes",
        "spawn_conflicts",
        "spawn_request_mounts",
        "nudge_wait_timeout"
      ],
      "git_sha": "[git_sha]",
      "protocol_version": "0.8",
      "version": "[version]"
    },
    "watchers": {
      "event_waiters": "[count]",
      "process_exit_watchers": "[count]",
      "shim_sockets": "[count]"
    }
  },
  "events": {
    "cursor": 2,
    "events": [
      {
        "payload": {
          "runtime_pid": "[pid]",
          "session_id": "[uuid]",
          "start_time": "[timestamp]"
        },
        "type": "running"
      },
      {
        "payload": {
          "evidence": "shim_exit",
          "exit_code": null,
          "session_id": "[uuid]",
          "signal": 15
        },
        "type": "terminated"
      }
    ]
  },
  "kill": {
    "outcome": "signalled"
  },
  "nudge_error": {
    "code": "runtime_error",
    "message": "[message]"
  },
  "spawn": {
    "payload": {
      "event": {
        "payload": {
          "runtime_pid": "[pid]",
          "session_id": "[uuid]",
          "start_time": "[timestamp]"
        },
        "type": "running"
      },
      "lifecycle": {
        "log_availability": {
          "payload": {
            "stderr_path": "[path]",
            "stdout_path": "[path]"
          },
          "type": "headless"
        },
        "runtime": "claude",
        "runtime_pid": "[pid]",
        "session_id": "[uuid]",
        "shim_pid": "[pid]",
        "start_time": "[timestamp]",
        "state": "running",
        "tmux_pane": "[tmux_pane]"
      },
      "log_dir": "[path]",
      "stderr_path": "[path]",
      "stdout_path": "[path]"
    },
    "type": "spawned"
  },
  "status": [
    {
      "log_availability": {
        "payload": {
          "stderr_path": "[path]",
          "stdout_path": "[path]"
        },
        "type": "headless"
      },
      "runtime": "claude",
      "runtime_pid": "[pid]",
      "session_id": "[uuid]",
      "shim_pid": "[pid]",
      "start_time": "[timestamp]",
      "state": {
        "exited": {
          "code": null,
          "signal": 15
        }
      },
      "tmux_pane": "[tmux_pane]"
    }
  ],
  "version": {
    "capabilities": [
      "structured_protocol_errors",
      "headless_stdio_log_paths",
      "status_session_set_filter",
      "status_updated_since_filter",
      "typed_nudge_outcomes",
      "validate_target_preflight",
      "events_cursor",
      "events_long_poll",
      "tmux_pane_snapshot",
      "kill_outcomes",
      "spawn_conflicts",
      "spawn_request_mounts",
      "nudge_wait_timeout"
    ],
    "git_sha": "[git_sha]",
    "protocol_version": "0.8",
    "version": "[version]"
  }
}
