internal/runtime/app/tests/snapshots/surface_snapshots__status_json_output_is_stable.snap
---
source: crates/rtm-cli/tests/surface_snapshots.rs
expression: value
---
[
  {
    "log_availability": {
      "payload": {
        "stderr_path": "[path]",
        "stdout_path": "[path]"
      },
      "type": "headless"
    },
    "runtime": "claude",
    "runtime_pid": "[pid]",
    "session_id": "[uuid]",
    "shim_pid": "[pid]",
    "start_time": "[timestamp]",
    "state": "running",
    "tmux_pane": "[tmux_pane]"
  }
]
